[gd_scene load_steps=2 format=3 uid="uid://bvn7h4if00yc2"]

[ext_resource type="Script" uid="uid://cancyvi4h5hcf" path="res://Scripts/Subwindows/UnsavedChanges.gd" id="1_ane8r"]

[node name="UnsavedChanges" type="Window"]
title = "Do you really want to close the file?"
initial_position = 2
size = Vector2i(320, 250)
exclusive = true
unresizable = true
always_on_top = true
script = ExtResource("1_ane8r")

[node name="Label" type="Label" parent="."]
offset_left = 10.0
offset_top = 10.0
offset_right = 302.0
offset_bottom = 59.0
text = "Do you really want to close the file?
This may lead to losing information
made during the usage of DH.
Things such as outdated strings,
unfinished dialogues may occur."

[node name="OkButton" type="Button" parent="."]
offset_left = 10.0
offset_top = 150.0
offset_right = 306.0
offset_bottom = 181.0
text = "Yes, I am aware of the consequences."

[node name="CancelButton" type="Button" parent="."]
offset_left = 10.0
offset_top = 190.0
offset_right = 185.0
offset_bottom = 221.0
text = "No, I want to go back."

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="pressed" from="OkButton" to="." method="_on_ok_button_pressed"]
[connection signal="pressed" from="CancelButton" to="." method="_on_cancel_button_pressed"]
